[package]
name = "jetson_gpio"
version = "0.1.1"
authors = ["Roland Kajatin roland.kajatin@gmail.com"]
edition = "2021"
description = "A Rust port of NVIDIA's Python library for controlling GPIO pins on select Jetson devices"
documentation = "https://docs.rs/jetson_gpio"
repository = "https://github.com/Kajatin/jetson-gpio-rust"
license = "MIT"
keywords = ["gpio", "jetson", "nvidia"]
categories = ["embedded", "hardware-support"]
#exclude = []
#include = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
